CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(tmaster)
SET(RUNTIME_OUTPUT_DIRECTORY, ${CMAKE_CURRENT_BINARY_DIR})


SET(FLTK_DIR "C:/Users/i028161/Tools/fltk")
SET(FLTK_INCLUDE_DIR "${FLTK_DIR}/include")
SET(FLTK_LIBRARIES "${FLTK_DIR}/lib")
SET(FLTK_FLUID_EXECUTABLE "${FLTK_DIR}/bin/fluid.exe")
INCLUDE_DIRECTORIES("${FLTK_INCLUDE_DIR}")

SET(BOOST_ROOT "C:/Users/i028161/Tools/boost_1_49_0")
find_package( Boost 1.36.0 )
if(Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
endif()

FIND_PACKAGE(FLTK REQUIRED)
ADD_SUBDIRECTORY(src)