CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(tmaster)
SET(RUNTIME_OUTPUT_DIRECTORY, ${CMAKE_CURRENT_BINARY_DIR})


SET(FLTK_DIR "C:/Users/i028161/Tools/fltk")
SET(FLTK_INCLUDE_DIR "${FLTK_DIR}/include")
SET(FLTK_LIBRARIES "${FLTK_DIR}/lib")
SET(FLTK_FLUID_EXECUTABLE "${FLTK_DIR}/bin/fluid.exe")
INCLUDE_DIRECTORIES("${FLTK_INCLUDE_DIR}")

SET(BOOST_ROOT "C:/Users/i028161/Tools/boost")
MESSAGE(STATUS "** Search Boost root: ${BOOST_ROOT}")

FIND_PACKAGE(Boost REQUIRED)

MESSAGE(STATUS "** Boost Include: ${Boost_INCLUDE_DIR}")
MESSAGE(STATUS "** Boost Libraries: ${Boost_LIBRARY_DIR}")
MESSAGE(STATUS "** Boost Libraries: ${Boost_LIBRARIES}")

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
LINK_DIRECTORIES(${Boost_LIBRARY_DIR})

FIND_PACKAGE(FLTK REQUIRED)
ADD_SUBDIRECTORY(src)